--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 32px;
 }
+
+.header__image {
+  width: 800px;
+  height: 800px;
+}
